--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,10 +1,20 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
-  padding: 6rem;
+  padding: 10px;
   min-height: 100vh;
+}
+
+.rgbPanelContainer { 
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height:100%;
+  justify-content: space-between;
+  background-color: aliceblue;
+  overflow: scroll;
 }
 
 .description {
