--- a/src/Views/panel.module.css
+++ b/src/Views/panel.module.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  color:black
 }
 .numberInner {
   display: flex;
@@ -26,6 +27,7 @@
 
   margin-top: auto;
   margin-bottom: auto;
+  color:black;
   /* border: 1px solid black; */
 }
 .number label {
