--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,20 @@
   min-height: 100vh;
 }
 
+.pageTitle  {
+display:flex;
+align-items: center;
+color:white;
+width:100%;
+height:40px;
+background-color: blue;
+}
+.pageTitle label {
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 24px;;
+}
+
 .rgbPanelContainer { 
   display: flex;
   flex-direction: column;
