--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -12,13 +12,15 @@ display:flex;
 align-items: center;
 color:white;
 width:100%;
-height:40px;
+height:55px;
 background-color: blue;
 }
 .pageTitle label {
   margin-left: auto;
   margin-right: auto;
-  font-size: 24px;;
+  padding:8px;
+  font-family: Papyrus;
+  font-size: 24px;
 }
 
 .rgbPanelContainer { 
