--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -19,6 +19,7 @@ background-color: blue;
   margin-left: auto;
   margin-right: auto;
   padding:8px;
+  font-family: Papyrus;
   font-size: 24px;
 }
 
